...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/puzzle_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textNoSuggestions"
            android:text="@string/create_cg_page_pn" />

        <EditText
            android:id="@+id/solution_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text|textNoSuggestions"
            android:text="@string/create_cg_page_sol" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/encode_solution"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleEncodeSolutionClick"
                android:text="@string/create_cg_page_encode_solution_button" />

            <Button
                android:id="@+id/randomize_cypher_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleRandomizeCypherClick"
                android:text="@string/create_cg_page_randomize_cypher_button" />

            <Button
                android:id="@+id/customize_cypher_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="handleCustomizeCypherClick"
                android:text="@string/create_cg_page_customize_cypher_button" />

...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/a" />

                    <EditText
                        android:id="@+id/et_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textNoSuggestions" />
                </LinearLayout>
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/b" />

                    <EditText
                        android:id="@+id/et_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textNoSuggestions" />
                </LinearLayout>
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/g" />

                    <EditText
                        android:id="@+id/et_g"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textNoSuggestions" />
                </LinearLayout>
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/h" />

                    <EditText
                        android:id="@+id/et_h"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textNoSuggestions" />
                </LinearLayout>
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/i" />

                    <EditText
                        android:id="@+id/et_i"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textNoSuggestions" />
                </LinearLayout>
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/l" />

                    <EditText
                        android:id="@+id/et_l"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textNoSuggestions" />
                </LinearLayout>
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/p" />

                    <EditText
                        android:id="@+id/et_p"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textNoSuggestions" />
                </LinearLayout>
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/u" />

                    <EditText
                        android:id="@+id/et_u"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textNoSuggestions" />
                </LinearLayout>
...
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/encoded_phrase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/allowed_attempts_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="@string/create_cg_page_max_attempts" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="handleSaveClick"
            android:text="@string/create_cg_page_save_button" />

        <Button
...
