...
    <string name="app_name">SDPCryptogram</string>

    <string name="landing_page_welcome_tv">Welcome! Choose what you\'d like to do</string>
    <string name="landing_page_login_button">Login</string>
    <string name="landing_page_createAccount_button">Create Account</string>

    <string name="ca_page_welcome">Enter your account credentials</string>
    <string name="ca_page_fn">FirstName</string>
    <string name="ca_page_ln">LastName</string>
    <string name="ca_page_un">Username</string>
    <string name="ca_page_email">emailAddress@server.domain</string>
    <string name="ca_page_ca_button">Create account!</string>

    <string name="login_page_welcome">Enter your username</string>
    <string name="login_page_un">Username</string>
    <string name="login_page_login_button">Log in!</string>

    <string name="main_menu_page_create_button">Create a cryptogram</string>
    <string name="main_menu_page_solve_button">Solve a cryptogram</string>
    <string name="main_menu_page_view_button">View cryptograms</string>
    <string name="main_menu_page_logout_button">Log out</string>

    <string name="view_menu_page_incomplete_button">View incomplete cryptograms</string>
    <string name="view_menu_page_complete_button">View complete cryptograms</string>
    <string name="view_menu_page_created_button">View created cryptograms</string>
    <string name="view_menu_page_statistics_button">View cryptogram statistics</string>
    <string name="view_menu_page_back_button">Main menu</string>
...
